# charla

./: .charla.json  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  api.txt  cli.py  ollama.md  pyproject.toml  requirements.txt  todo.md
.github/workflows/: test.yml
charla/: __about__.py  __init__.py  chat.py  cli.py  client.py  config.py  ghmodels.py  ui.py  util.py
charla/client/: __init__.py  github.py  ollama.py
tests/: test_chat.py  test_cli.py  test_client.py  test_config.py
